k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotions
  template:
    metadata:
      labels:
        app: promotions
    spec:
      containers:
        - name: promotions
          image: promotions:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
